--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -5,4 +5,9 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Fachschaft">
   <h1>Willkommen bei der Fachschaft</h1>
   <p>Infos über uns…</p>
+
+  <div class="p-6 bg-red-500 text-white rounded-xl">
+  Tailwind läuft 🚀
+</div>
+
 </Layout>
